[package]
name = "amm-lab"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "amm_lab"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = {version = "0.31.0", features = ["init-if-needed"]}
anchor-spl = "0.31.0"
bytemuck_derive = "=1.8.1"
fixed = "=1.23.1"
half = "=2.2.1"
fixed-sqrt = "=0.2.5"

